Added delete video endpoint
