# server/docs/swagger.yaml
@@ -3303,6 +3303,61 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
+  /api/projects/{id}/videos/{videoId}:
+    delete:
+      summary: Add a new video to a project
+      description: Creates a new video entry associated with a specific project.
+      tags:
+        - Projects
+      security:
+        - shibbolethAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the project to delete a video from
+          required: true
+          schema:
+            type: integer
+            example: 5
+        - name: videoId
+          in: path
+          description: The ID of the video
+          required: true
+          schema:
+            type: integer
+            example: 42
+        - in: query
+          name: devId
+          schema:
+            type: integer
+          required: false
+          description: The user ID to be used as the current user
+      responses:
+        '200':
+          description: Video deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 201
+                  error:
+                    type: string
+                    nullable: true
+                    example: null
+                  data:
+                    type: string
+                    nullable: true
+                    example: null
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
   # MOD
   /api/mod/clear-profile/{id}:
     patch:
